# proyectoHerr

./: README.md  pyproject.toml
projectoherr/: image_viewer.py  mnist_loader.py  network.py  train.py
projectoherr/model/: model.pkl
